--- a/package.json
+++ b/package.json
@@ -9,6 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@material-ui/core": "^4.12.1",
+    "@styled-icons/bootstrap": "^10.34.0",
+    "@styled-icons/boxicons-regular": "^10.34.0",
+    "@styled-icons/boxicons-solid": "^10.34.0",
+    "@styled-icons/evaicons-outline": "^10.34.0",
+    "@styled-icons/evaicons-solid": "^10.34.0",
+    "@styled-icons/fa-solid": "^10.34.0",
+    "@styled-icons/heroicons-solid": "^10.34.0",
+    "@styled-icons/ionicons-sharp": "^10.34.0",
+    "@styled-icons/material-twotone": "^10.34.0",
     "babel-plugin-styled-components": "^1.13.2",
     "next": "11.0.1",
     "react": "17.0.2",
