--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.12.1",
+    "@material-ui/icons": "^4.11.2",
     "@styled-icons/bootstrap": "^10.34.0",
     "@styled-icons/boxicons-regular": "^10.34.0",
     "@styled-icons/boxicons-solid": "^10.34.0",
@@ -23,6 +24,7 @@
     "babel-plugin-styled-components": "^1.13.2",
     "next": "11.0.1",
     "react": "17.0.2",
+    "react-avatar-editor": "^11.1.0",
     "react-dom": "17.0.2",
     "styled-components": "^5.3.0",
     "validator": "^13.6.0"
