--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "17.0.2",
     "react-avatar-editor": "^11.1.0",
     "react-dom": "17.0.2",
+    "react-loader-spinner": "^4.0.0",
     "styled-components": "^5.3.0",
     "validator": "^13.6.0"
   },
